changelogs when making a new release, docs/changelog.txt in the dfhack repo must
have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

# 50.12-r3

## New Tools
- `gui/aquifer`: interactive aquifer visualization and editing
- `open-legends`: (reinstated) open legends mode directly from a loaded fort

## New Features
- `quickfort`: add options for setting warm/damp dig markers when applying blueprints
- `gui/quickfort`: add options for setting warm/damp dig markers when applying blueprints
- `gui/reveal`: new "aquifer only" mode to only see hidden aquifers but not reveal any tiles
- `gui/notify`: optional notification for general wildlife (not on by default)

## Fixes
- `fix/loyaltycascade`: fix edge case where loyalties of renegade units were not being fixed
- `quickfort`: reject tiles for building that contain magma or deep water
- `armoks-blessing`: fix error when making "Normal" attributes legendary
- `emigration`: remove units from burrows when they emigrate
- `agitation-rebalance`: fix calculated percent chance of cavern invasion
- `gui/launcher`: don't pop up a result dialog if a command run from minimal mode has no output

## Misc Improvements
- `gui/reveal`: show aquifers even when not in mining mode
- `gui/control-panel`: add alternate "nodump" version for `cleanowned` that does not cause citizens to toss their old clothes in the dump. this is useful for players who would rather sell old clothes than incinerate them
- `agitation-rebalance`: when more than the maximum allowed cavern invaders are trying to enter the map, prefer keeping the animal people invaders instead of their war animals

## Removed